--- a/source/webapp/templates/base.html
+++ b/source/webapp/templates/base.html
@@ -49,11 +49,12 @@
         test
     {% endblock %}
 
-
+    <button id="button" data-articles-link="{% url "webapp:index" %}">Тык</button>
 </div>
 
 </body>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
+<script src="{% static "js/index.js" %}"></script>
 </html>
