--- a/source/webapp/templates/articles/article_view.html
+++ b/source/webapp/templates/articles/article_view.html
@@ -24,8 +24,14 @@
     <div class="card mt-3">
         <div class="card-body text-center">
             <h5 class="card-title">{{ article.upper }}</h5>
+        <span id="article-{{ article.id }}" >Лайки: {{ article.likes.count }}</span>
             <h6 class="card-subtitle mb-2 text-muted">Автор: {{ article.author }}</h6>
             <p class="card-text">{{ article.content }}</p>
+            {% if request.user.is_authenticated %}
+                <a data-article-id="article-{{ article.id }}" class="likes" href="{% url "api_v1:likes" article.pk %}">
+                    {% if request.user in article.likes.all %} Дизлайк {% else %} Лайк {% endif %}
+                </a>
+            {% endif %}
         </div>
     </div>
     <h3 class="my-3 text-center">Комментарии</h3>
@@ -42,14 +48,14 @@
                     </div>
                 </div>
             </div>
-        {% empty %}
+            {% empty %}
             <p>Комментариев нет</p>
         {% endfor %}
     </div>
     <h3>Теги</h3>
     {% for tag in article.tags.all %}
         <p>{{ tag.name }}</p>
-    {% empty %}
+        {% empty %}
         <p>Тэгов нет</p>
     {% endfor %}
     <a href="{% url "webapp:index" %}">На главную</a>
