--- a/source/webapp/templates/articles/index.html
+++ b/source/webapp/templates/articles/index.html
@@ -9,10 +9,16 @@
     {% endif %}
 {% endblock %}
 {% block content %}
-    <div class="mt-3">
-        {% include "partial/search.html" %}
+    {% for tag in tags %}
+        <p class="tag" data-url="{% url 'api_v1:article_view' %}" data-tag-id="{{ tag.pk }}">{{ tag.name }}</p>
+    {% endfor %}
+    <div id="content">
+        <div class="mt-3">
+            {% include "partial/search.html" %}
+        </div>
+
+        {% include "partial/articles_list_partial.html" %}
     </div>
 
-    {% include "partial/articles_list_partial.html" %}
 {% endblock %}
 
