--- a/source/webapp/templates/partial/articles_list_partial.html
+++ b/source/webapp/templates/partial/articles_list_partial.html
@@ -5,11 +5,17 @@
             <div class="card mb-3">
                 <div class="card-body">
                     <h5 class="card-title">{{ article.title }}</h5>
+                    <span id="article-{{ article.id }}" >Лайки: {{ article.likes.count }}</span>
                 </div>
                 <a href="{{ article.get_absolute_url }}" class="card-link btn btn-primary">Подробнее</a>
+                {% if request.user.is_authenticated %}
+                    <a data-article-id="article-{{ article.id }}" class="likes" href="{% url "api_v1:likes" article.pk %}">
+                        {% if request.user in article.likes.all %} Дизлайк {% else %} Лайк {% endif %}
+                    </a>
+                {% endif %}
             </div>
         </div>
-    {% empty %}
+        {% empty %}
     {% endfor %}
     {% if is_paginated %}
         <div class="text-center">{% include "partial/pagination.html" %}</div>
